--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -225,7 +225,7 @@
 <body>
     <div class="dashboard-container">
         <div class="sidebar">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/4/4a/Logo_Unsri.png" alt="Logo" class="logo">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/4/4a/Logo_Unsri.png" alt="LoGo" class="loGo">
         </div>
         <div class="main-content">
             <div class="header">
