--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -57,12 +57,8 @@
             </div>
           </div>
           <div class="right-panel">
-            <div class="header-right">
-              <span class="timer" id="timer">01:20:45</span>
-              <button class="record-btn">
-                <i class="fa fa-circle"></i> Record
-              </button>
-              <span class="person-count" id="person-count"><i class="fa fa-users"></i> <span id="person-count-value">0</span></span>
+            <div class="header-right" style="display: flex; align-items: center; justify-content: center; gap: 20px;">
+              <span class="person-count" id="person-count" style="font-size: 1.5em;"><i class="fa fa-users"></i> <span id="person-count-value">0</span></span>
             </div>
             <div class="video-container">
               <img
